# kempbasu

./: AUTHORS  Makefile.am  P-value.c  P-value2d.c  README  acinclude.m4  alpha.c  bootstrap.sh  configure.ac  cutoff.rb  fbst-loginorm.c  fbst-poisson.c  fbst.c  fbst.h  fbst2d.c  integrate.c  kempbasu.c  kempbasu.h  kempbasu.rb  logfbst2d.c  loginorm.c  make_table  matrix.c  matrix.h  params.h  poisson.c  pvalue.c  pvalue2d.c  pvalue_ab.c  pvalue_graph.c
examples/: test0.mat  test2.mat  test2.mat-basu-ref  test3.mat  test3.mat-basu-ref  test4.mat  test4.mat-basu-ref  test5.mat
lisp/: IO.fasl  IO.lisp  basu.fasl  basu.lisp  cl-gnuplot.lisp  cl-statistics.fasl  cl-statistics.lisp  kemp.fasl  kemp.lisp  kempbasu.asd  kempbasu.fasl  matrix.fasl  matrix.lisp  normal-ziggurat.lisp  package.lisp  packages.fasl  packages.lisp  randist-gamma.lisp
